--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 
         <div class="row">
           
-            <div id="tapper" class="col-xs-12">
-                0
-            </div>
+            <div id="tapper" class="col-xs-12">0</div>
         </div>
 
     </div>
